--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,12 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: dailist-app:dev
+    image: yustika/dailist-app:dev
     ports:
       - "8081:80"
     environment:
       APP_ENV: local
       APP_DEBUG: "true"
-      # DB setting lokal (sesuaikan jika perlu)
       DB_CONNECTION: mysql
       DB_HOST: db
       DB_PORT: 3306
